--- a/Desafio-todo/src/pages/Home/Home.module.css
+++ b/Desafio-todo/src/pages/Home/Home.module.css
@@ -88,3 +88,16 @@
   font-weight: 700;
   color: var(---purple);
 }
+
+
+.containerTasks .listTaksCreate {
+  width: 100%;
+  margin-top: 1.5rem;
+}
+
+
+.listTaksCreate ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
