--- a/Desafio-todo/src/pages/Home/Home.module.css
+++ b/Desafio-todo/src/pages/Home/Home.module.css
@@ -105,6 +105,9 @@
 
 
 .containerTasks .listTaksCreate {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
   width: 100%;
   margin-top: 1.5rem;
 }
@@ -114,4 +117,10 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+}
+
+@media (max-width: 778px){
+  .containerHome{
+    padding: 0 1rem;
+  }
 }
