--- a/Desafio-todo/src/pages/Home/Home.module.css
+++ b/Desafio-todo/src/pages/Home/Home.module.css
@@ -59,6 +59,20 @@
   line-height: 140%;
   transition: 0.5s;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.btnSubmit .plusIcon {
+  text-align: center;
+  line-height: 10px;
+  border: 2px solid var(---gray--100);
+  border-radius: 999px;
+  font-size: 0.875rem;
+  margin-left: 0.5rem;
+  width: 1rem;
+  height: 1rem;
+  font-weight: 400;
 }
 
 .btnSubmit:hover{
@@ -117,6 +131,32 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+}
+
+.containerTasks .emptyTasks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4rem;
+  border-top: 1px solid var(---gray--400);
+  margin-top: 1.5rem;
+}
+
+.emptyTasks strong {
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 140%;
+  color: var(---gray--300);
+  text-align: center;
+}
+
+.emptyTasks p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 140%;
+  color: var(---gray--300);
+  text-align: center;
 }
 
 @media (max-width: 778px){
